--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@nestjs/mapped-types": "^2.0.1",
     "@nestjs/mongoose": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.0.4",
     "mongoose": "^7.3.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "swagger-ui-express": "^4.6.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
