--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/mongoose": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.0.4",
+    "axios": "^1.4.0",
     "mongoose": "^7.3.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
