--- a/jest.config.json
+++ b/jest.config.json
@@ -5,5 +5,8 @@
   "testRegex": ".spec.ts$",
   "transform": {
     "^.+\\.(t|j)s$": "ts-jest"
-  }
+  },
+  "setupFiles": [
+    "./config/jestVars.ts"
+  ]
 }
