Add: infra module, aws-cdk init

--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "@nestjs/mongoose": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.0.4",
+    "aws-cdk": "^2.86.0",
+    "aws-cdk-lib": "^2.86.0",
     "axios": "^1.4.0",
+    "constructs": "^10.2.67",
     "mongoose": "^7.3.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
