--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "vindow-be",
   "version": "0.0.1",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "description": "",
   "author": "",
   "private": true,
@@ -30,6 +33,7 @@
     "@nestjs/swagger": "^7.0.4",
     "aws-cdk": "^2.86.0",
     "aws-cdk-lib": "^2.86.0",
+    "aws-iam": "^2.0.5",
     "axios": "^1.4.0",
     "constructs": "^10.2.67",
     "mongoose": "^7.3.0",
@@ -47,6 +51,7 @@
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
+    "dotenv": "^16.3.1",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
