--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "db:seed": "ts-node seeds/seed.ts"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
@@ -31,6 +32,7 @@
     "@nestjs/mongoose": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.0.4",
+    "@nestjs/terminus": "^10.0.1",
     "aws-cdk": "^2.86.0",
     "aws-cdk-lib": "^2.86.0",
     "aws-iam": "^2.0.5",
